# datasheet-chart-digitizer

./: .gitignore  README.md  pyproject.toml
docs/worklists/: CHART-REVIEW-CHECKLIST.md  README.md  agent-orchestration.md  auto-acceptance-oracle.md  breakdown-fail-closed-contract.md  cap-anchor-parser.md  cap-axis-tick-centers.md  (+79 more)
scripts/: generate_transfer_review25.py
tests/: test_annotate_fail_closed.py  test_annotate_pdf.py  test_axis_calibration.py  test_body_diode_finder.py  test_breakdown_voltage.py  test_capacitance_linear_axis.py  test_capacitance_panel_semantics.py  test_capacitance_plot_box_open_right.py  test_capacitance_qoss_plot_top.py  test_capacitance_source_path_rescue.py  test_capacitance_source_support.py  test_capacitance_trace_validation.py  test_coss_dslib.py  test_coss_export.py  test_crop_transform.py  test_depletion_gate_charge.py  test_diode_forward_voltage.py  test_find_charts.py  test_finder_review_blockers.py  test_gate_charge_ocr.py  test_gate_charge_vpl.py  test_hxy_gate_charge_ownership.py  test_layout_clustering.py  test_littelfuse_annotate.py  test_littelfuse_detached_captions.py  test_mosfet_capacitance.py  test_numeric_axis.py  test_numeric_axis_engineering.py  test_overlay.py  test_rdson_current.py  test_rdson_detector.py  test_rdson_temperature.py  test_reverse_recovery.py  test_stl52_vector_outline_breakdown.py  test_stw46_transposed_body_diode.py  test_toshiba_capacitance_raster.py  test_transfer_anchor_batch.py  test_transfer_characteristics.py  test_transfer_closure.py  test_transfer_review.py  (+2 more)
tools/: cluster_datasheet_layouts.py  run_capacitance_regression.py  run_local_regression.py  run_vpl_finder_parity.py
(+52 files in other folders)
