[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasheet-chart-digitizer"
version = "0.1.0"
description = "Find, digitize, calibrate, and validate curves from datasheet chart PDFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "opencv-python",
  "pillow",
  "pymupdf",
  "scipy",
]

[project.scripts]
dsdig = "datasheet_chart_digitizer.cli:main"
datasheet-chart-find = "datasheet_chart_digitizer.find_charts:main"
datasheet-chart-digitize-capacitance = "datasheet_chart_digitizer.mosfet_capacitance:main"

[tool.setuptools.packages.find]
where = ["src"]
